--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
+    "dev:webpack": "next dev --webpack",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
@@ -12,6 +13,8 @@
   "dependencies": {
     "@aptos-labs/ts-sdk": "^5.1.6",
     "@privy-io/react-auth": "^3.8.1",
+    "got": "^11.8.6",
+    "lucide-react": "^0.559.0",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
