--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "dev:webpack": "next dev --webpack",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint",
     "generate-client": "tsx scripts/generate-client.ts"
@@ -17,7 +17,8 @@
     "lucide-react": "^0.559.0",
     "next": "16.0.7",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "webpack": "^5.103.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
