--- a/web/package.json
+++ b/web/package.json
@@ -12,12 +12,21 @@
   },
   "dependencies": {
     "@aptos-labs/ts-sdk": "^5.1.6",
+    "@aptos-labs/wallet-adapter-core": "^7.10.1",
+    "@aptos-labs/wallet-adapter-react": "^7.2.7",
+    "@aptos-labs/wallet-standard": "^0.5.2",
+    "@nightlylabs/aptos-wallet-adapter-plugin": "^0.2.12",
     "@privy-io/react-auth": "^3.8.1",
+    "@telegram-apps/bridge": "^2.11.0",
+    "@wallet-standard/core": "^1.0.3",
     "got": "^11.8.6",
     "lucide-react": "^0.559.0",
     "next": "16.0.10",
+    "petra-plugin-wallet-adapter": "^0.4.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hot-toast": "^2.6.0",
+    "uuid": "^13.0.0",
     "webpack": "^5.103.0"
   },
   "devDependencies": {
