--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@ STREAM_MANAGEMENT_IMPLEMENTATION.md
 DEPLOYMENT_SUMMARY.md
 DEPLOYMENT_COMPLETE.md
 SETUP_README.md
+AGENTPAY_MVP_DEVELOPMENT_REPORT.md
+MOVEMENT_MIGRATION.md
+PRIVY_MOVEMENT_INTEGRATION.md
