Updated text files

--- a/.gitignore
+++ b/.gitignore
@@ -49,12 +49,14 @@ contract/derive-key.js
 
 # OS
 Thumbs.db
-DEEP_COSMOS_DESIGN_IMPLEMENTATION.md
-STREAM_CREATION_IMPLEMENTATION.md
-STREAM_MANAGEMENT_IMPLEMENTATION.md
-DEPLOYMENT_SUMMARY.md
-DEPLOYMENT_COMPLETE.md
-SETUP_README.md
-AGENTPAY_MVP_DEVELOPMENT_REPORT.md
-MOVEMENT_MIGRATION.md
-PRIVY_MOVEMENT_INTEGRATION.md
+
+# Others
+dm.md
+deploy-dev0.ps1
+deploy-dev1.sh
+AGD_REPORT.md
+PVY_MT1_INTEGRATION.md
+STUP.md
+STRM_CRTN_IMPTN.md
+STRM_MGT_IMPN.md
+DP_CSMS_DSGN_IMPLN.md
